added more properties

--- a/src/webparts/sgartClock/SgartClockWebPart.manifest.json
+++ b/src/webparts/sgartClock/SgartClockWebPart.manifest.json
@@ -36,15 +36,18 @@
         "showHandSeconds": true,
         "backgroundColor": "#EEE",
         "borderColor": "#000",
-        "notchesColor": "#000",
-        "fourthColor": "#000",
-        "handHoursColor": "#333",
-        "handMinutesColor": "#000",
-        "handSecondsColor": "#F00",
-        "handPointColor": "#000",
+        "showNotches": "Minutes1",
+        "notches1Color": "#000",
+        "notches5Color": "#000",
+        "notches15Color": "#000",
+        "handHoursColor": "rgba(51,51,51,.95)",
+        "handMinutesColor": "rgba(51,51,51,.95)",
+        "handSecondsColor": "rgba(255,51,51,.95)",
+        "handPointColor": "rgba(51,51,51,.99)",
+        "clockTextReorder": "Foreground",
         "clockText": "sgart.it",
         "clockTextColor": "#800",
-        "showDigitalClock": true,
+        "digitalClockReorder": "Foreground",
         "showDigitalClockSeconds": true,
         "digitalClockColor": "#888"
       }
